# cxx-pcap-simba-decoder

./: .gitignore  CMakeLists.txt  README.md  main.cxx
.github/workflows/: cmake-build-test.yml
pcap/: parser.cxx  parser.h  pcap_parser.cxx  pcap_parser.h  pcap_record.cxx  pcap_record.h  record.h
protocols/: ethernet.cxx  ethernet.h  ipv4.cxx  ipv4.h  simba.cxx  simba.h  udp.cxx  udp.h  upd.cxx
protocols/simba/: IncrementalPacketHeader.h  MarketDataHeader.h  OrderBookSnapshot.h  OrderExecution.h  OrderUpdate.h  SbeMessageHeader.h  common.h
tests/: simba-100.pcap  test_ethernet.cxx  test_ipv4.cxx  test_pcap.cxx  test_simba.cxx  test_udp.cxx
